--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -27,8 +27,11 @@ jobs:
       - name: Build Docker image
         run: docker build -t murillosanti/devops-aws-app:latest .
 
-      - name: Login Docker Hub
-        run: echo "${{ secrets.DOCKER_PASS }}" | docker login -u murillosanti --password-stdin
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Push Docker image
         run: docker push murillosanti/devops-aws-app:latest
@@ -43,4 +46,4 @@ jobs:
             docker stop devops-app || true
             docker rm devops-app || true
             docker pull murillosanti/devops-aws-app:latest
-            docker run -d -p 80:3000 --name devops-app murillosanti/devops-aws-app:latest
+            docker run -d -p 80:3000 --name devops-app --restart always murillosanti/devops-aws-app:latest
