--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -43,7 +43,18 @@ jobs:
           username: ec2-user
           key: ${{ secrets.EC2_KEY }}
           script: |
+            echo "Parando containers na porta 80..."
+            docker ps -q --filter "publish=80" | xargs -r docker stop
+            docker ps -aq --filter "publish=80" | xargs -r docker rm
+
+            echo "Removendo container antigo..."
             docker stop devops-app || true
             docker rm devops-app || true
+
+            echo "Baixando nova imagem..."
             docker pull murillocwb/devops-aws-app:latest
+
+            echo "Subindo novo container..."
             docker run -d -p 80:3000 --name devops-app murillocwb/devops-aws-app:latest
+
+            echo "Deploy finalizado com sucesso!"
